--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,11 +28,18 @@
             Common Opensource Application Publishing Platform</div>
         <div id="menu_view">
             <ul>
+            <li class="current"><a href="/">Home</a> </li>
+        <li><a href="/information">Info</a></li>
+        <li><a href="/packages">Packages</a></li>
+        <li><a href="http://wiki.coapp.org">Documentation</a></li>
+        <li><a href="/contribute">Contribute</a></li>
+        <li><a href="/development">Development</a></li>
+        <li><a href="/about">About Us</a></li>
+            <!--
                 <li><a href="">Home</a></li>
-                <li class="page_item"><a href="/articles/" title="Articles">
-                    Articles</a></li>
-                <li class="page_item"><a href="/about-me/" title="About me">
-                    About me</a></li>
+                <li class="page_item"><a href="/articles/" title="Articles">Articles</a></li>
+                <li class="page_item"><a href="/about-me/" title="About me">About me</a></li>
+                -->
             </ul>
         </div>
         <h1 id="header">
