--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@ title: CoApp
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css" type="text/css" media="screen" >
+  <link rel="stylesheet" href="/style.css" type="text/css" media="screen" >
   <link type="text/css" rel="stylesheet" href="/syntax.css" >
   <title>{{ page.title }}</title>
   <script type="text/javascript" src="jquery-1.6.1.js">
@@ -31,12 +31,12 @@ title: CoApp
             <div id="HeaderArea">
               <div id="Logo">
                 <a onclick="return false" href="#">
-				  <img style="border-width: 0px; position: absolute; left: 0px; top: -10px;" alt="Logo" src="images/logo3.png" ></a><h1>&nbsp;Common Opensource Application Publishing Platform</h1>
+				  <img style="border-width: 0px; position: absolute; left: 0px; top: -10px;" alt="Logo" src="/images/logo3.png" ></a><h1>&nbsp;Common Opensource Application Publishing Platform</h1>
               </div>
               
               <div id="NavAux">
                             <div id="Search"><div id="SearchContainer">
-                    <div id="SearchLink"><img src="images/search.icon.png" alt="Search icon" ></div>
+                    <div id="SearchLink"><img src="/images/search.icon.png" alt="Search icon" ></div>
                     <div id="SearchField" style="right: -300px; "><div id="SearchBar"><form action="" class="search-form" method="get"><fieldset><input type="text" value="" name="q" id="q"><button type="submit">Search</button></fieldset></form></div></div>
                 </div></div>
                 </div>
@@ -114,7 +114,7 @@ title: CoApp
               <div id="MainContentArea">
                 <div class="zonegroup">
                   <div id="BannerZone" class="pane w100">
-                    <img src="images/banner.home.png" alt="Header Banner" class="img" ></div>
+                    <img src="/images/banner.home.png" alt="Header Banner" class="img" ></div>
                 </div>
                 <div class="zonegroup">
                   <div id="MainContentZone" class="EmptyPane pane w100">
