--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,7 +82,7 @@
                 </div>
                 -->
                 
-                        {%includeset leftboxes %}
+                       <!-- { % includeset leftboxes % }  -->
 						</div>
 						
 						
