--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,8 @@
 <head>
 <link href="/style.css" media="screen" rel="stylesheet" type="text/css">
 <link href="/syntax.css" rel="stylesheet" type="text/css">
-<title>CoApp more stuff</title>
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+<title>CoApp {{ page.title }}</title>
 <script src="/jquery-1.6.1.js" type="text/javascript">
 </script>
 <script src="/jquery.tweet.js" type="text/javascript">
@@ -48,23 +49,23 @@
 					</div>
 					<div id="MenuH" class="MenuH01">
 						<span><span class="menu" tabindex="0">
-						<span class="mi root mi0 first ">
+						<span class="mi root mi0 first {% if page.title == 'CoApp' %}sel{% endif %}">
 						<a class="txt" style="cursor: pointer;" href="/">Home</a></span>
 						
-						<span class="mi root mi1 ">
+						<span class="mi root mi1 {% if page.title == 'Information' %}sel{% endif %}">
 						
 						<a class="txt" style="cursor: pointer;" href="/Information.html">Information</a></span>
-						<span class="mi root mi2 ">
+						<span class="mi root mi2 {% if page.title == 'Packages' %}sel{% endif %}">
 						<a class="txt" style="cursor: pointer;" href="/Packages.html">Packages</a></span>
-						<span class="mi root mi3 ">
+						<span class="mi root mi3 {% if page.title == 'Development' %}sel{% endif %}">
 						<a class="txt" style="cursor: pointer;" href="/Development.html">Development</a></span>
-						<span class="mi root mi4  last">
+						<span class="mi root mi4 {% if page.title == 'About' %}sel{% endif %} last">
 						<a class="txt" style="cursor: pointer;" href="/About.html">About Us</a></span>
 						</span></span></div>
 					<div id="ContentArea">
 						<hr>
 						<div id="SideBar" class="MenuVWidth MenuV01">
-                            
+                           {% includeset leftboxes %} 
 						</div>
 						
 						
@@ -81,81 +82,12 @@
 								<div id="L1_Zone60" class="pane w66">
 									<div class="C00_CleanWPadding container">
 										<div class="containercontent">
-											<div class="post">
-    <!-- This is the posts header text -->
-    <h2>
-        <a href="/More-Stuff" rel="bookmark" title="more stuff">more stuff</a></h2>
-    <!-- This is the date and author -->
-    <small>June 11, 2011 by Garrett Serack</small>
-    <div class="entry">
-        <p>Hello World</p>
-
-    </div>
-    <p class="postmetadata">
-        <a href="/More-Stuff#comments"
-            title="Comment on more stuff"><span
-                class="dsq-postid" rel=" http://www.coapp.org/More-Stuff/">View
-                Comments</span> </a>
-    </p>
-
-    <!-- Disqus Comment System -->
-    <a name="comments" />
-    <div id="disqus_thread">
-        <div id="dsq-content">
-        </div>
-    </div>
-    <ul id="dsq-comments">
-    </ul>
-    <script type="text/javascript">
-        //var disqus_url = 'http://www.coapp.org/More-Stuff/ ';
-        //var disqus_identifier = ' http://www.coapp.org/More-Stuff/';
-        //var disqus_container_id = 'disqus_thread';
-        //var disqus_domain = 'disqus.com';
-       // var disqus_shortname = 'coapp';
-        //var disqus_title = "more stuff";
-        //var disqus_config = function () {
-        //    var config = this; // Access to the config object
-
-            /* 
-            All currently supported events:
-            * preData — fires just before we request for initial data
-            * preInit - fires after we get initial data but before we load any dependencies
-            * onInit  - fires when all dependencies are resolved but before dtpl template is rendered
-            * afterRender - fires when template is rendered but before we show it
-            * onReady - everything is done
-            */
-
-//            config.callbacks.preData.push(function () {
-//                // clear out the container (its filled for SEO/legacy purposes)
-//                document.getElementById(disqus_container_id).innerHTML = '';
-//            });
-/            config.callbacks.onReady.push(function () {
-//                // sync comments in the background so we don't block the page
-//                DISQUS.request.get('?cf_action=sync_comments&post_id=956');
-//            });
-//        };
-    </script>
-    <script type="text/javascript">
-//        var DsqLocal = {
-//            'trackbacks': [],
-//        };
-    </script>
-    <script type="text/javascript">
-//        (function () {
-//            var dsq = document.createElement('script'); dsq.type = 'text/javascript';
-//            dsq.async = true;
-//            dsq.src = 'http://' + disqus_shortname + '.' + disqus_domain + '/embed.js?pname=wordpress&pver=2.50';
-            //(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-//        })();
-    </script>
-    <!-- End of Disqus Comment System -->
-</div>
-<br>
+											{{content}}<br>
 										</div>
 									</div>
 								</div>
 								<div id="L1_Zone30" class="pane C01 w30">
-                                     
+                                    {% includeset rightboxes %} 
                                     
 								</div>
 							</div>
